golang/k8s-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-bridge-k8s-webservice
  labels:
    app: test-bridge-k8s-webservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-bridge-k8s-webservice
  template:
    metadata:
      labels:
        app: test-bridge-k8s-webservice
    spec:
      containers:
      - name: test-bridge-k8s-webservice
        image: stevekieu/test-bridge-k8s-webservice:20210903-1
        ports:
          - containerPort: 8080
        readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /container_status
              port: 8080
              scheme: HTTP
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 30
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /container_status
            port: 8080
            scheme: HTTP
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 30
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /container_status
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            memory: 32Mi # ${MEM_MIN}
            cpu: 20m #${CPU_MIN}
        lifecycle:
          preStop:
            exec:
              command:
              - sleep
              - "90"
