golang/k8s-deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-bridge-k8s-webservice
  labels:
    service: test-bridge-k8s-webservice
  annotations:
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: "test-bridge-k8s-webservice"
