golang/k8s-deployment/ingress.yaml
---
# Source: rptool-webhook/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  labels:
    service: "test-bridge-k8s" # ${PROJECT_NAME}
  name: "test-bridge-k8s"
  annotations:
    kubernetes.io/ingress.class: qa-shared-nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  tls:
    - hosts:
        - "test-bridge-k8s-20-53-124-141.nip.io"
      # secretName: wildcard-go1-cloud-tls
  rules:
  - host: test-bridge-k8s-20-53-124-141.nip.io
    http:
      paths:
      - path: "/"
        pathType: "Prefix"
        backend:
          service:
            name: "test-bridge-k8s-webservice"
            port:
              number: 80
